<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:background="@color/filterBottomSheetBg"
    tools:context=".ui.fragments.SourceAndLanguageBottomSheet">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gilroy_bold"
        android:text="@string/sources"
        android:textColor="@color/filterBottomSheetHeading"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/sources_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/sourcesChipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true"
                app:checkedChip="@+id/all_source_chip">

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/all_source_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all_source" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/toi_source_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/times_of_india" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/googleNewsIn_source_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/google_news_in" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/bbc_source_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bbc" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/lenta_source_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lenta" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/rbc_source_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rbc" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/alJazeera_source_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/al_jazeera" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/abc_source_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/abc" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/aftenPost_source_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aftenpost" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/bloomberg_source_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bloomberg" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/businessInsider_source_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/business_insider" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/cnn_source_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cnn" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/focus_source_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/focus" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/nationalGeographic_source_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/national_geographic" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/ign_source_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ign" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/googleNewsFr_source_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/google_news_fr" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/googleNewsAu_source_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/google_news_au" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/googleNewsCa_source_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/google_news_ca" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/fourFourTwo_source_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/four_four_two_uk" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/googleNewsIl_source_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/google_news_il" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/jerusalemPost_source_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/the_jerusalem_post" />

            </com.google.android.material.chip.ChipGroup>

        </LinearLayout>

    </HorizontalScrollView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gilroy_bold"
        android:text="@string/languages"
        android:textColor="@color/filterBottomSheetHeading"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sources_scrollview" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/languagesChipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:checkedChip="@+id/english_language_chip"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/english_language_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/en_english" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/espanol_language_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/es_espanol" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/german_language_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/de_german" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/french_language_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fr_french" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/russian_language_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ru_russian" />

            </com.google.android.material.chip.ChipGroup>

        </LinearLayout>

    </HorizontalScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitBtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:text="@string/submit"
        style="@style/Widget.MaterialComponents.Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

</androidx.constraintlayout.widget.ConstraintLayout>