<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.DetailsActivity">

    <ImageView
        android:id="@+id/article_thumbnail"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:src="@drawable/business"
        android:scaleType="fitXY"
        android:contentDescription="@string/article_thumbnail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/detail_article_thumbnail_gradient"
        app:layout_constraintBottom_toBottomOf="@+id/article_thumbnail"
        app:layout_constraintEnd_toEndOf="@+id/article_thumbnail"
        app:layout_constraintStart_toStartOf="@+id/article_thumbnail"
        app:layout_constraintTop_toTopOf="@+id/article_thumbnail" />

    <ImageView
        android:id="@+id/saveToFavourites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:tint="@color/white"
        android:contentDescription="@string/save_to_favourites"
        android:src="@drawable/ic_bookmark_unchecked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/articleTitleTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/gilroy_bold"
        android:lineSpacingMultiplier="1.3"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/articleCategoryTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Johnson &amp; Johnson booster shot prompts large increase in immune response, company says - CNN" />

    <TextView
        android:id="@+id/articleCategoryTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/category_tv_background"
        android:checked="true"
        android:fontFamily="@font/gilroy_bold"
        android:paddingStart="24dp"
        android:paddingTop="8dp"
        android:paddingEnd="24dp"
        android:paddingBottom="8dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Health" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:background="@drawable/detail_screen_bottomsheet_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/article_thumbnail">

        <View
            android:id="@+id/view2"
            android:layout_width="50dp"
            android:layout_height="5dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/authorTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gilroy_bold"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            android:textColor="@color/logo_first"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2"
            tools:text="Anulekha Roy / 2021-09-06T04:11:23Z" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/gilroy_bold"
            android:text="@string/description"
            android:textColor="@color/heading_textcolor"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="@+id/authorTv"
            app:layout_constraintTop_toBottomOf="@+id/authorTv" />

        <TextView
            android:id="@+id/articleDescriptionTv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="8dp"
            android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries."
            android:textSize="18sp"
            android:fontFamily="@font/montserrat_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <Button
            android:id="@+id/learnMoreBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/learn_more"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/articleDescriptionTv"
            app:layout_constraintTop_toBottomOf="@+id/articleDescriptionTv" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>